demos/demo2/pod-con-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-con-hostpath
spec:
  volumes:
    - name: host-volume
      hostPath:
        path: /etc
  containers:
    - name: flask
      image: harbor.local/demo/flask-personalizado:1.0
      volumeMounts:
        - mountPath: /host
          name: host-volume
