demos/demo2/k8sdisallowhostpath-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostpath
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowhostpath

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          volume := input.review.object.spec.volumes[_]
          volume.hostPath
          msg := sprintf("No se permite el uso de hostPath: %v", [volume.name])
        }
